# NeuroExp

./: README.md  exp_setting.py  experiment.py  main.py  pyproject.toml  stimulus_type.py
neuroexplib/: exp_setting.py  experiment.py  parallel_port.py  stimulus_type.py
neuroexplib/stimulus/: trigger_type.py
neuroexplib/trigger/: com_port.py  parallel_port.py  trigger.py
